Fix vercel.json regex patterns for CSS and JS headers

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "**/*.css",
+      "source": "/(.*)\\.css",
       "headers": [
         {
           "key": "Content-Type",
@@ -14,7 +14,7 @@
       ]
     },
     {
-      "source": "**/*.js",
+      "source": "/(.*)\\.js",
       "headers": [
         {
           "key": "Content-Type",
