Add explicit static site configuration for Vercel - buildCommand, outputDirectory, .vercelignore

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "version": 2,
+  "public": true,
+  "buildCommand": "echo 'Static site - no build needed'",
+  "outputDirectory": "public",
+  "installCommand": "echo 'No install needed'",
   "headers": [
     {
       "source": "/(.*)\\.css",
