--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "serpsystems-homepage",
   "version": "1.0.0",
   "description": "serp.systems homepage - AI-Powered SEO Revolution",
-  "main": "index.html",
+  "main": "public/index.html",
   "scripts": {
-    "start": "serve .",
-    "build": "echo 'Static site - no build needed'"
+    "build": "echo 'Static site - no build needed'",
+    "start": "echo 'Static site - serve from public directory'"
   },
-  "keywords": ["seo", "ai", "homepage", "static"],
+  "keywords": ["seo", "ai", "homepage", "static", "vercel"],
   "author": "serp.systems",
   "license": "MIT",
-  "devDependencies": {
-    "serve": "^14.0.0"
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
